--- a/index.html
+++ b/index.html
@@ -22,48 +22,43 @@
   <body>
     <header>
       <section class="topNav">
-        <div class="center">
-          <div class="logo"><img src="./images/logo.svg" alt="Logo" /></div>
-          <div class="navContainer">
-            <nav class="headerNav">
-              <ul class="navBar">
-                <li><a href="http://">Desitnations</a></li>
-                <li><a href="http://">Hotels</a></li>
-                <li><a href="http://">Flights</a></li>
-                <li><a href="http://">Bookings</a></li>
-              </ul>
-            </nav>
-            <button class="login">Login</button>
-            <button class="signUp">Sign up</button>
-            <!-- <label for="language-select"></label> -->
-            <select class="languageSelect" id="languageSelect">
-              <option value="en">EN</option>
-              <option value="es">ES</option>
-              <option value="fr">FR</option>
-              <option value="de">DE</option>
-            </select>
-          </div>
+        <div class="logo"><img src="./images/logo.svg" alt="Logo" /></div>
+        <div class="navContainer">
+          <nav class="headerNav">
+            <ul class="navBar">
+              <li><a href="http://">Desitnations</a></li>
+              <li><a href="http://">Hotels</a></li>
+              <li><a href="http://">Flights</a></li>
+              <li><a href="http://">Bookings</a></li>
+            </ul>
+          </nav>
+          <button class="login">Login</button>
+          <button class="signUp">Sign up</button>
+          <select class="languageSelect" id="languageSelect">
+            <option value="en">EN</option>
+            <option value="es">ES</option>
+            <option value="fr">FR</option>
+            <option value="de">DE</option>
+          </select>
         </div>
       </section>
-      <section class="heroContent flexCenter">
-        <div class="heroCenterContainer flexCenter">
-          <div class="textContainer flexCenter">
-            <span>BEST DESTINATIONS AROUND THE WORLD</span>
-            <h1>Travel, enjoy and live a new and full life</h1>
-            <p>
-              Built Wicket longer admire do barton vanity itself do in it.
-              Preferred to sportsmen it engrossed listening. Park gate sell they
-              west hard for the.
-            </p>
-            <div class="btnContainer flexCenter">
-              <button class="findOutMore">Find out more</button>
-              <button class="play">&#9658;</button>
-              <span>Play Demo</span>
-            </div>
+      <section class="heroContent">
+        <div class="textContainer">
+          <span>BEST DESTINATIONS AROUND THE WORLD</span>
+          <h1>Travel, enjoy and live a new and full life</h1>
+          <p>
+            Built Wicket longer admire do barton vanity itself do in it.
+            Preferred to sportsmen it engrossed listening. Park gate sell they
+            west hard for the.
+          </p>
+          <div class="btnContainer">
+            <button class="findOutMore">Find out more</button>
+            <button class="play">&#9658;</button>
+            <span>Play Demo</span>
           </div>
-          <div class="imgContainer">
-            <img src="./images/Traveller 1.svg" alt="Traveller" />
-          </div>
+        </div>
+        <div class="imgContainer">
+          <img src="./images/Traveller 1.svg" alt="Traveller" />
         </div>
       </section>
     </header>
