new update HTML SCSS

--- a/index.html
+++ b/index.html
@@ -41,9 +41,15 @@
             <option value="de">DE</option>
           </select>
         </div>
+        <img class="backgroundImg" src="./images/Decore.svg" alt="Decoration" />
       </section>
       <section class="heroContent">
         <div class="textContainer">
+          <img
+            src="./images/Decoretext.svg"
+            alt="Text decore"
+            class="textDecore"
+          />
           <span>BEST DESTINATIONS AROUND THE WORLD</span>
           <h1>Travel, enjoy and live a new and full life</h1>
           <p>
@@ -57,10 +63,47 @@
             <span>Play Demo</span>
           </div>
         </div>
+        <img class="firstPlane" src="./images/plane.svg" alt="Plane" />
         <div class="imgContainer">
           <img src="./images/Traveller 1.svg" alt="Traveller" />
         </div>
+        <img class="secondPlane" src="./images/plane.svg" alt="Plane" />
       </section>
     </header>
+    <main>
+      <section class="category">
+        <div class="categoryTextContainer">
+          <span>CATEGORY</span>
+          <h2>We Offer Best Services</h2>
+        </div>
+        <div class="sericesCardContainer">
+          <div class="card">
+            <img src="./images/satellite.svg" alt="" srcset="" />
+            <h3>Calculated Weather</h3>
+            <p>Built Wicket longer admire do barton vanity itself do in it.</p>
+          </div>
+          <div class="card">
+            <img src="./images/bgplane.svg" alt="" srcset="" />
+            <h3>Best Flights</h3>
+            <p>Engrossed listening. Park gate sell they west hard for the.</p>
+          </div>
+          <div class="card">
+            <img src="./images/micro.svg" alt="" srcset="" />
+            <h3>Local Events</h3>
+            <p>
+              Barton vanity itself do in it. Preferd to men it engrossed
+              listening.
+            </p>
+          </div>
+          <div class="card">
+            <img src="./images/settings.svg" alt="" srcset="" />
+            <h3>Customization</h3>
+            <p>
+              We deliver outsourced aviation services for military customers
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
