--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@400;500;700;900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <script src="app.js" defer></script>
     <title>Document</title>
@@ -72,6 +76,7 @@
     </header>
     <main>
       <section class="category">
+        <img class="bgimage" src="/images/Group 4.svg" alt="" />
         <div class="categoryTextContainer">
           <span>CATEGORY</span>
           <h2>We Offer Best Services</h2>
@@ -83,6 +88,7 @@
             <p>Built Wicket longer admire do barton vanity itself do in it.</p>
           </div>
           <div class="card">
+            <img class="redBg" src="./images/Rectangle 157 (1).svg" alt="" />
             <img src="./images/bgplane.svg" alt="" srcset="" />
             <h3>Best Flights</h3>
             <p>Engrossed listening. Park gate sell they west hard for the.</p>
@@ -101,6 +107,33 @@
             <p>
               We deliver outsourced aviation services for military customers
             </p>
+          </div>
+        </div>
+      </section>
+      <section class="topSelling">
+        <span>Top Selling</span>
+        <h2>Top Destinations</h2>
+        <div class="destinationImgConatiner">
+          <div class="cityCard">
+            <img src="" alt="" />
+            <div class="cityText">
+              <span>Rome, Italy</span> <span>$5,42k</span>
+            </div>
+            <span> <i class="fas fa-location-arrow"></i> 10 Days Trip</span>
+          </div>
+          <div class="cityCard">
+            <img src="" alt="" />
+            <div class="cityText">
+              <span>London, UK</span> <span>$4,2k</span>
+            </div>
+            <span> <i class="fas fa-location-arrow"></i> 12 Days Trip</span>
+          </div>
+          <div class="cityCard">
+            <img src="" alt="" />
+            <div class="cityText">
+              <span>Full Europe</span> <span>$15k</span>
+            </div>
+            <span> <i class="fas fa-location-arrow"></i> 28 Days Trip</span>
           </div>
         </div>
       </section>
