--- a/index.html
+++ b/index.html
@@ -1,142 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@400;500;700;900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <script src="app.js" defer></script>
-    <title>Document</title>
-  </head>
-  <body>
-    <header>
-      <section class="topNav">
-        <div class="logo"><img src="./images/logo.svg" alt="Logo" /></div>
-        <div class="navContainer">
-          <nav class="headerNav">
-            <ul class="navBar">
-              <li><a href="http://">Desitnations</a></li>
-              <li><a href="http://">Hotels</a></li>
-              <li><a href="http://">Flights</a></li>
-              <li><a href="http://">Bookings</a></li>
-            </ul>
-          </nav>
-          <button class="login">Login</button>
-          <button class="signUp">Sign up</button>
-          <select class="languageSelect" id="languageSelect">
-            <option value="en">EN</option>
-            <option value="es">ES</option>
-            <option value="fr">FR</option>
-            <option value="de">DE</option>
-          </select>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@400;500;700;900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+    rel="stylesheet" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+  <script src="app.js" defer></script>
+  <title>Document</title>
+</head>
+
+<body>
+  <header>
+    <section class="topNav">
+      <div class="logo"><img src="./images/logo.svg" alt="Logo" /></div>
+      <div class="navContainer">
+        <nav class="headerNav">
+          <ul class="navBar">
+            <li><a href="http://">Desitnations</a></li>
+            <li><a href="http://">Hotels</a></li>
+            <li><a href="http://">Flights</a></li>
+            <li><a href="http://">Bookings</a></li>
+          </ul>
+        </nav>
+        <button class="login">Login</button>
+        <button class="signUp">Sign up</button>
+        <select class="languageSelect" id="languageSelect">
+          <option value="en">EN</option>
+          <option value="es">ES</option>
+          <option value="fr">FR</option>
+          <option value="de">DE</option>
+        </select>
+      </div>
+      <img class="backgroundImg" src="./images/Decore.svg" alt="Decoration" />
+    </section>
+    <section class="heroContent">
+      <div class="textContainer">
+        <img src="./images/Decoretext.svg" alt="Text decore" class="textDecore" />
+        <span>BEST DESTINATIONS AROUND THE WORLD</span>
+        <h1>Travel, enjoy and live a new and full life</h1>
+        <p>
+          Built Wicket longer admire do barton vanity itself do in it.
+          Preferred to sportsmen it engrossed listening. Park gate sell they
+          west hard for the.
+        </p>
+        <div class="btnContainer">
+          <button class="findOutMore">Find out more</button>
+          <button class="play">&#9658;</button>
+          <span>Play Demo</span>
         </div>
-        <img class="backgroundImg" src="./images/Decore.svg" alt="Decoration" />
-      </section>
-      <section class="heroContent">
-        <div class="textContainer">
-          <img
-            src="./images/Decoretext.svg"
-            alt="Text decore"
-            class="textDecore"
-          />
-          <span>BEST DESTINATIONS AROUND THE WORLD</span>
-          <h1>Travel, enjoy and live a new and full life</h1>
+      </div>
+      <img class="firstPlane" src="./images/plane.svg" alt="Plane" />
+      <div class="imgContainer">
+        <img src="./images/Traveller 1.svg" alt="Traveller" />
+      </div>
+      <img class="secondPlane" src="./images/plane.svg" alt="Plane" />
+    </section>
+  </header>
+  <main>
+
+    <section class="category">
+      <img class="bgimage" src="/images/Group 4.svg" alt="" />
+      <div class="categoryTextContainer">
+        <span>CATEGORY</span>
+        <h2>We Offer Best Services</h2>
+      </div>
+      <div class="sericesCardContainer">
+        <div class="card">
+          <img src="./images/satellite.svg" alt="" srcset="" />
+          <h3>Calculated Weather</h3>
+          <p>Built Wicket longer admire do barton vanity itself do in it.</p>
+        </div>
+        <div class="card">
+          <img class="redBg" src="./images/Rectangle 157 (1).svg" alt="" />
+          <img src="./images/bgplane.svg" alt="" srcset="" />
+          <h3>Best Flights</h3>
+          <p>Engrossed listening. Park gate sell they west hard for the.</p>
+        </div>
+        <div class="card">
+          <img src="./images/micro.svg" alt="" srcset="" />
+          <h3>Local Events</h3>
           <p>
-            Built Wicket longer admire do barton vanity itself do in it.
-            Preferred to sportsmen it engrossed listening. Park gate sell they
-            west hard for the.
+            Barton vanity itself do in it. Preferd to men it engrossed
+            listening.
           </p>
-          <div class="btnContainer">
-            <button class="findOutMore">Find out more</button>
-            <button class="play">&#9658;</button>
-            <span>Play Demo</span>
-          </div>
         </div>
-        <img class="firstPlane" src="./images/plane.svg" alt="Plane" />
-        <div class="imgContainer">
-          <img src="./images/Traveller 1.svg" alt="Traveller" />
+        <div class="card">
+          <img src="./images/settings.svg" alt="" srcset="" />
+          <h3>Customization</h3>
+          <p>
+            We deliver outsourced aviation services for military customers
+          </p>
         </div>
-        <img class="secondPlane" src="./images/plane.svg" alt="Plane" />
-      </section>
-    </header>
-    <main>
-      <section class="category">
-        <img class="bgimage" src="/images/Group 4.svg" alt="" />
-        <div class="categoryTextContainer">
-          <span>CATEGORY</span>
-          <h2>We Offer Best Services</h2>
+      </div>
+    </section>
+
+    <section class="topSelling">
+      <span>Top Selling</span>
+      <h2>Top Destinations</h2>
+      <div class="destinationImgConatiner">
+        <div class="cityCard">
+          <img class="city" src="./images/rome.svg" alt="" />
+          <div class="cityText">
+            <span>Rome, Italy</span> <span>$5,42k</span>
+          </div>
+          <span> <i class="fas fa-location-arrow"></i> 10 Days Trip</span>
         </div>
-        <div class="sericesCardContainer">
-          <div class="card">
-            <img src="./images/satellite.svg" alt="" srcset="" />
-            <h3>Calculated Weather</h3>
-            <p>Built Wicket longer admire do barton vanity itself do in it.</p>
+        <div class="cityCard">
+          <img class="city" src="./images/lonodn.svg" alt="" />
+          <div class="cityText">
+            <span>London, UK</span> <span>$4,2k</span>
           </div>
-          <div class="card">
-            <img class="redBg" src="./images/Rectangle 157 (1).svg" alt="" />
-            <img src="./images/bgplane.svg" alt="" srcset="" />
-            <h3>Best Flights</h3>
-            <p>Engrossed listening. Park gate sell they west hard for the.</p>
-          </div>
-          <div class="card">
-            <img src="./images/micro.svg" alt="" srcset="" />
-            <h3>Local Events</h3>
-            <p>
-              Barton vanity itself do in it. Preferd to men it engrossed
-              listening.
-            </p>
-          </div>
-          <div class="card">
-            <img src="./images/settings.svg" alt="" srcset="" />
-            <h3>Customization</h3>
-            <p>
-              We deliver outsourced aviation services for military customers
-            </p>
-          </div>
+          <span> <i class="fas fa-location-arrow"></i> 12 Days Trip</span>
         </div>
-      </section>
-      <section class="topSelling">
-        <span>Top Selling</span>
-        <h2>Top Destinations</h2>
-        <div class="destinationImgConatiner">
-          <div class="cityCard">
-            <img src="" alt="" />
-            <div class="cityText">
-              <span>Rome, Italy</span> <span>$5,42k</span>
-            </div>
-            <span> <i class="fas fa-location-arrow"></i> 10 Days Trip</span>
+        <div class="cityCard">
+          <img class="city" src="./images/europe.svg" alt="" />
+          <div class="cityText">
+            <span>Full Europe</span> <span>$15k</span>
           </div>
-          <div class="cityCard">
-            <img src="" alt="" />
-            <div class="cityText">
-              <span>London, UK</span> <span>$4,2k</span>
-            </div>
-            <span> <i class="fas fa-location-arrow"></i> 12 Days Trip</span>
-          </div>
-          <div class="cityCard">
-            <img src="" alt="" />
-            <div class="cityText">
-              <span>Full Europe</span> <span>$15k</span>
-            </div>
-            <span> <i class="fas fa-location-arrow"></i> 28 Days Trip</span>
-          </div>
+          <span> <i class="fas fa-location-arrow"></i> 28 Days Trip</span>
         </div>
-      </section>
-    </main>
-  </body>
+      </div>
+    </section>
+  </main>
+</body>
+
 </html>
