--- a/index.html
+++ b/index.html
@@ -105,7 +105,18 @@
       </div>
     </section>
 
-
+    <section class="subscribe">
+      <img class="planeBlue" src="./images/Group 77.svg" alt="plane">
+      <img src="./images/Group 42.svg" alt="circle">
+      <img class="secondCircle" src="./images/Group 42 (3).svg" alt="circle">
+      <h3>Subscribe to get information, latest news and other
+        interesting offers about Jadoo</h3>
+      <div class="input">
+        <input type="email" placeholder="&#x2709; Your email">
+        <button class="sub">Subscribe</button>
+      </div>
+      <img src="./images/Group 5.svg" alt="plus" class="plus">
+    </section>
   </main>
 </body>
 
