--- a/index.html
+++ b/index.html
@@ -105,6 +105,64 @@
       </div>
     </section>
 
+    <section class="easyAndFast">
+      <div class="bookTripContainer">
+        <span>Easy and Fast</span>
+        <h2>Book Your Next Trip In 3 Easy Steps</h2>
+        <div class="offers">
+          <div class="imgOffers"> <img src="" alt="" srcset=""> </div>
+          <div class="offersText">
+            <h4>Choose Destination</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur
+              adipiscing elit. Urna, tortor tempus. </p>
+          </div>
+        </div>
+        <div class="offers">
+          <div class="imgOffers"> <img src="" alt="" srcset=""> </div>
+          <div class="offersText">
+            <h4>Make Payment</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur
+              adipiscing elit. Urna, tortor tempus. </p>
+          </div>
+        </div>
+        <div class="offers">
+          <div class="imgOffers"> <img src="" alt="" srcset=""> </div>
+          <div class="offersText">
+            <h4>Reach Airport on Selected Date</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur
+              adipiscing elit. Urna, tortor tempus. </p>
+          </div>
+        </div>
+      </div>
+      <div class="bookTripOffer">
+        <div class="cardContainer">
+          <img src="" alt="">
+        </div>
+        <div class="secondCardContainer"></div>
+      </div>
+    </section>
+
+    <!-- <section class="testimonials">
+      <!-- cia reikia skaidriu per js -->
+    <!--<div class="containerText">
+        <span>TESTIMONIALS</span>
+        <h2>What People Say About Us.</h2>
+        <!-- taskiukai -->
+    <!-- </div>
+      <div class="comments">
+        <!-- slaideriai -->
+    <!-- </div>
+    </section>-->
+
+    <section class="logoContainer">
+      <div class="logoImg "> <img class="cover" src="./images/image 27.svg" alt="axon"> </div>
+      <div class="logoImg"> <img class="cover" src="./images/image 28.svg" alt="jetstar"> </div>
+      <div class="logoImg"> <img class="cover" src="./images/image 29.svg" alt="expedia"> </div>
+      <div class="logoImg "> <img class="size" src="./images/image 30.svg" alt="qantas"> </div>
+      <div class="logoImg "> <img class="size" src="./images/image 31.svg" alt="alitalia"> </div>
+      <img class="logoCircle" src="./images/Ellipse 249.svg" alt="circle">
+    </section>
+
     <section class="subscribe">
       <img class="planeBlue" src="./images/Group 77.svg" alt="plane">
       <img src="./images/Group 42.svg" alt="circle">
